examples/misc/error/compilation/memory_stack_eval.bfml
let fix f =
  let g x = f (fun y -> x x y) in
  g g

let _ =
  fix
    (fun loop _ -> 1 + loop 0)
    0

let main = []